--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <title>Task Manager</title>
   </head>
-  <body>
+  <body class="{{user.theme_preference}}">
     {% block body %}
     {% endblock %}
     <script src="{% static 'js/filelist.js' %}"></script>
