--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -3,7 +3,7 @@
 {% load notification_tags %}
 {% get_unread_notifications user as notifications %}
 {%endif%}
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<div class=" collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
 
     <li class="nav-item dropdown">
@@ -25,9 +25,10 @@
       <a class="nav-link" href="#" id="user-account-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         <span class="bi-person-circle"></span>
       </a>
-      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-account-dropdown">
+      <ul class="dropdown-custom-theme dropdown-menu dropdown-menu-end" aria-labelledby="user-account-dropdown">
         <li><a class="dropdown-item" href="{% url 'profile' %}">Change profile</a></li>
         <li><a class="dropdown-item" href="{% url 'password' %}">Change password</a></li>
+        <li><a class="dropdown-item" href="{% url 'preferences' %}">Preferences</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="{% url 'log_out' %}">Log out</a></li>
       </ul>
