--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -10,6 +10,7 @@
     <title>Task Manager</title>
   </head>
   <body class="{{user.theme_preference}}">
+  </body>
     {% block body %}
     {% endblock %}
     <script src="{% static 'js/filelist.js' %}"></script>
