--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -167,40 +167,57 @@ ul.teams-list li {
     font-size: large;
 }
 
+/*  
+Default mode 
+*/
+.default-mode .sidebar {
+  background-color: rgb(239, 239, 239);
+}
 
-/* Dark mode body background color and text color */
+/*
+Dark mode  
+*/
 .dark-mode {
   background-color: #333;
   color: #fff;
 }
-
+.dark-mode .dropdown-custom-theme  {
+  background-color: rgb(69, 69, 69) ;
+  color: rgb(76, 76, 76) !important;
+}
 
 .dark-mode .sidebar {
-  background-color: rgb(147, 147, 147) ;
-  color: red;
+  background-color: rgb(69, 69, 69) ;
 }
 
-/* Example of adjusting hyperlink colors in dark mode */
 .dark-mode a {
-  color: #4d94ff; /* A lighter blue color for links in dark mode */
+  color: #ffffff; 
 }
 
-/* Fire mode body background color and text color */
-.fire-mode {
-  background-color: #FF8F77; /* Light orange */
-  color: #3E1E15; /* Dark brown */
+/* 
+Orange mode  
+*/
+.orange-mode {
+  background-color: #FFD7BA; 
+  color: #5A2C04;
 }
 
-.fire-mode .sidebar{
-  background-color: #d17864; /* Light orange */
-  color: #3E1E15; /* Dark brown */
+.orange-mode .sidebar {
+  background-color: #ffc99f; 
+  color: #FFFFFF; 
 }
-/* Example of adjusting hyperlink colors in fire mode */
-.fire-mode a {
-  color: #FFB996; /* Lighter peach */
+.orange-mode a {
+  color: #000000; 
 }
 
-/* Forest mode body background color and text color */
+.orange-mode .dropdown-custom-theme {
+  background-color: #ffffff; 
+  color: #5A2C04; 
+}
+
+/* 
+Forest mode 
+*/
 .forest-mode {
   background-color: #A3C1AD; 
   color: #1E3D22; 
@@ -214,29 +231,28 @@ ul.teams-list li {
   background-color: #507D60; 
   color: #1E3D22; 
 }
-/* Example of adjusting hyperlink colors in forest mode */
+
 .forest-mode a {
-  color: #ffffff; /* Lighter green */
+  color: #ffffff; 
 }
 
 .forest-mode a .btn {
   background-color: red ; 
 }
 
-
-
-/* Pink mode body background color and text color */
+/* 
+Pink mode 
+*/
 .pink-mode {
-  background-color: #FFC0CB; /* Pink */
-  color: #6B2737; /* Maroon */
-}
-.pink-mode .sidebar{
-  background-color: #c08e97; /* Pink */
-  color: #6B2737; /* Maroon */
+  background-color: #FDE2E4;
+  color: #882D60;
 }
 
+.pink-mode .sidebar {
+  background-color: #F4C2C2; 
+  color: #882D60; 
+}
 
-/* Example of adjusting hyperlink colors in pink mode */
 .pink-mode a {
-  color: #DB7093; /* Pale violet red */
+  color: #9E5062; 
 }
