--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -26,6 +26,7 @@
         <span class="bi-person-circle"></span>
       </a>
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-account-dropdown">
+        <li><a class="dropdown-item" href="{% url 'profile_image' %}">Profile image</a></li>
         <li><a class="dropdown-item" href="{% url 'profile' %}">Change profile</a></li>
         <li><a class="dropdown-item" href="{% url 'password' %}">Change password</a></li>
         <li><hr class="dropdown-divider"></li>
