front end design + bug fix

--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -129,7 +129,7 @@ document.addEventListener("DOMContentLoaded", function () {
             clearInterval(interval);
             return;
         }
-        items[index].style.opacity = "1"; // 显示列表项
+        items[index].style.opacity = "1";
         items[index].style.transform = "translateY(0)";
         index++;
     }, 200);
