--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -1,4 +1,5 @@
 {% extends 'base_content_with_sidebar.html' %}
+{% load static %}
 {% block content %}
 <div class="col-12 p-2">
     <div class="row d-flex justify-content-between">
@@ -9,7 +10,7 @@
                     {% for upload in uploads %}
                     <div class="flex-column flex-md-row list-item" style="margin-bottom: 0; opacity: 0; transform: translateY(20px);">
                         <a href="{{ upload.file.url }}" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true" style="width: 200%;" data-upload-time="{{ upload.uploaded_at }}">
-                            <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
+                            <img src="{% static '/image/pdf_icon_svg.png' %}" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
                             <div class="d-flex gap-2 w-100 justify-content-between">
                                 <div>
                                     <h6 class="mb-0"><strong>{{ upload.file.name }}</strong></h6>
